# traceid

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  README_zh.md  pyproject.toml  release-please-config.json
.github/workflows/: black.yml  poetry-publish.yml  poetry-unittest.yml  pr-conventional-commits-lint.yml  push-conventional-commits-lint.yml  start-release-version.yml  tag-and-release.yml
tests/: test_logging.py  test_traceid.py  test_traceid_async.py
traceid/: __init__.py  logging.py  traceid.py
