[tool.poetry]
name = "traceid"
version = "1.1.0"  # x-release-please-version
description = ""
authors = ["Yibu Ma"]
readme = "README.md"

[tool.ci]
os = ["ubuntu-latest", "macos-latest"]  # x-ci-os

[tool.poetry.dependencies]
python = ["^3.12", "^3.11"]  # x-ci-python-version


[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
coverage = "^7.1.0"
black = "^22.12.0"
diff-cover = "^7.4.0"


[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.6"
pre-commit = "^3.0.2"
commitizen = "^2.40.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
